soup-message-io: do an async close when doing non-blocking I/O [WIP]

When using chunked encoding, SoupBodyOutputStream needs to write the
final "0" chunk when it's closed, and thus may block. So we have to do
an async close in the non-blocking case.

(Does not currently pass "make check".)

https://bugzilla.gnome.org/show_bug.cgi?id=727138